[gd_scene load_steps=2 format=3 uid="uid://b14f06odwjtnx"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_cf13l"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cf13l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BtnStart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="BtnOption" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Option
"

[node name="BtnExit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnOption" to="." method="_on_btn_option_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnExit" to="." method="_on_btn_exit_pressed"]
